# nginx-1.22.0-ch

./: CMakeLists.txt  CMakeLists_bad.txt  ngx_rebuild.sh
conf/: nginx.conf
docs/: Event模块和配置的初始化.md
objs/: Makefile  autoconf.err  nginx.8  nginx.conf  ngx_auto_config.h  ngx_modules.c
src/additional/hash_count/: config  config.normal  ngx_http_hash_count_module.c
src/additional/hello/: ngx_http_hello_world_module.c  ngx_http_hello_world_module.h
src/additional/http/: ngx_http_count_module.c  ngx_http_hcount_module.c
src/additional/limit_traffic_rate/: config  ngx_http_limit_traffic_rate_filter_module.c
src/core/: nginx.c  ngx_array.c  ngx_array.h  ngx_buf.h  ngx_conf_file.c  ngx_conf_file.h  ngx_connection.c  ngx_connection.h  ngx_cycle.c  ngx_cycle.h  ngx_inet.c  ngx_log.c  ngx_log.h  ngx_module.c  ngx_module.h  ngx_proxy_protocol.h  ngx_rbtree.c  ngx_rbtree.h  ngx_slab.c  ngx_slab.h  ngx_string.c  ngx_string.h  ngx_times.c
src/event/: ngx_event.c  ngx_event.h  ngx_event_accept.c  ngx_event_posted.c  ngx_event_timer.c
src/event/modules/: ngx_epoll_module.c
src/http/: ngx_http.c  ngx_http_config.h  ngx_http_core_module.c  ngx_http_core_module.h  ngx_http_request.h
src/http/modules/: ngx_http_chunked_filter_module.c  ngx_http_not_modified_filter_module.c
src/os/unix/: ngx_alloc.c  ngx_process.c  ngx_process_cycle.c  ngx_time.h
src/stream/: ngx_stream.c
